--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,15 @@ body {
 .header-tel:focus {
   color: var(--main-text-color);
 }
+.main-btn {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+
+  letter-spacing: 0.03em;
+  color: var(--header-text-color);
+}
 
 .main-btn {
   font-weight: 500;
