--- a/css/styles.css
+++ b/css/styles.css
@@ -14,16 +14,26 @@ body {
 a {
   text-decoration: none;
 }
-
-.list {
-  text-decoration: none;
-}
 .list {
   list-style: none;
+}
+.list {
+  text-decoration: none;
 }
 
 .main-section {
   background-color: #2f303a;
+}
+.footer-list {
+  background-color: #2f303a;
+}
+
+.header-logo {
+  font-family: Raleway;
+  font-size: 26px;
+  line-height: 1.19x;
+  letter-spacing: 0.03em;
+  color: var(--accent-text-color);
 }
 .header-link {
   font-weight: 500;
@@ -36,8 +46,11 @@ a {
 .header-link:focus {
   color: var(--accent-text-color);
 }
-span {
+.header-logo span {
   color: black;
+}
+span {
+  color: #ffffff;
 }
 .header-infoto {
   font-style: normal;
@@ -99,7 +112,6 @@ span {
 }
 
 .abour-after-title {
-  font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -110,6 +122,7 @@ span {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: var(--header-text-color);
 }
 
@@ -151,6 +164,8 @@ span {
 }
 
 .footer-logo {
+  font-family: Raleway;
+  font-style: normal;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -166,18 +181,27 @@ span {
 
   color: var(--fourt-text-color);
 }
+
 .button {
   color: var(--header-text-color);
   cursor: pointer;
 }
-
-.header-tel {
-  font-family: Roboto;
+.footer-infoto {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  color: var(--footer-color);
+}
+
+.footer-tel {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--footer-color);
 }
 .header-tel:hover,
 .header-tel:focus {
